# autoharness

./: .gitignore  README.md  pyproject.toml
agentic-context-engine-22-04/: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
agentic-context-engine-22-04/ace/: __init__.py
agentic-context-engine-22-04/agent-guides/: logfire.md  tracing-sdk.md
agentic-context-engine-22-04/benchmarks/: README.md  __init__.py  base.py
agentic-context-engine-22-04/docs/: index.md
agentic-context-engine-22-04/examples/: tracing_glm_example.py
agentic-context-engine-22-04/overrides/: main.html
agentic-context-engine-22-04/pipeline/: __init__.py  branch.py  context.py  errors.py  pipeline.py  protocol.py
agentic-context-engine-22-04/scripts/: README.md  clean_skillbook.py  clean_skillbook_v4.py  merge_tau_results.py
agentic-context-engine-22-04/sdk/python/: pyproject.toml
agentic-context-engine-22-04/sdk/python/src/kayba_tracing/: __init__.py  _wrapper.py
agentic-context-engine-22-04/tests/: conftest.py  test_ace_core.py  test_ace_mcp_compatibility.py  test_ace_mcp_handlers.py  test_ace_mcp_models.py  test_ace_mcp_optional.py  test_ace_mcp_registry.py  test_ace_mcp_server.py  test_ace_runners.py  test_ace_steps.py  test_claude_sdk_live.py  test_claude_sdk_step.py  test_kayba_cli.py  test_load_traces_step.py  test_openclaw.py  test_tracing.py  (+4 more)
autoharness/: __init__.py  cli.py  constants.py  errors.py
docs/: ace-airline-eval-protocol.md  agent-harness-v1-implementation-plan.md  agent-harness-v1-proposal.md  agent-harness-v1-task-breakdown.md  automated-harness-research.md  tau2-airline-experiment.md
tests/: test_ace_tau_real_config.py  test_baseline_and_iteration.py  test_cli_run.py  test_config.py  test_module_attr_surface.py  test_script_runner.py  test_tau2_airline_ace.py  test_tau2_integration.py  test_workspace_tree_surface.py
(+276 files in other folders)
