[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kayba-tracing"
version = "0.9.7"
description = "Kayba tracing SDK — instrument your AI agents and send traces to Kayba"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Kayba.ai", email = "hello@kayba.ai"},
]
keywords = ["kayba", "tracing", "mlflow", "observability", "ai", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mlflow>=3.1.0",
]

[project.urls]
Homepage = "https://kayba.ai"
Repository = "https://github.com/Kayba-ai/agentic-context-engine"

[tool.setuptools.packages.find]
where = ["src"]
include = ["kayba_tracing", "kayba_tracing.*"]
